Fixed the spacing and sizing of elements

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,7 +3,7 @@
   padding: 30px;
   z-index: 10;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   /* position: fixed; */
 }
 ul {
