--- a/src/Samantha.css
+++ b/src/Samantha.css
@@ -1,6 +1,3 @@
-main {
-  overflow: hidden;
-}
 #webdev {
   color: #FFF;
   font-family: 'Poppins', sans-serif;
@@ -17,6 +14,7 @@ main {
   position: absolute;
   top: 50%;
   left: 50%;
+  max-width: 50%;
   transform: translate(-50%, -50%);
   /* animation: fill 0.5s ease forwards 3s; */
 }
